--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -71,6 +71,36 @@ body {
 	display: inline-block;
 	margin-right: 13px;
 }
+.breadcrumbs {
+	&__inner {
+		padding: 45px 0 40px;
+		overflow: hidden;
+		width: 1200px;
+	}
+	&__list {
+		li {
+			display: inline-block;
+			position: relative;			
+			& + li {
+				padding-left: 24px;
+				::before {
+					content: '-';
+					position: absolute;
+					left: 8px;
+					color: $green;
+				}
+			}
+			&:last-child {
+			a, span {
+				color: $bg;
+				}
+			}
+		}	
+		a {
+			color: #bec9cf;
+		}			
+	}
+}
 .angle-right {
 	position: relative;
 	padding-left: 15px;
@@ -82,4 +112,7 @@ body {
 		color: $green;
 		font-size: 14px;
 	}
+}
+#modal {
+	display: none;
 }
